[package]
name = "tohang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.1", features = ["derive"] }
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
sqlx = {features = ["sqlite", "runtime-async-std-native-tls"] }
structopt = { version = "0.3", features = ["paw"] }

[[bin]]
name = "tohang"
path = "src/bin.rs"

[lib]
name = "tohang_lib"
path = "src/lib/lib.rs"